# StarFighter

./: CMakeLists.txt
cmake/: elastic.cmake  junctions.cmake
include/StarFighter/: Camera.h  Data.h  Entity.h  Transform.h  UIContext.h  World.h
include/StarFighter/Components/: AmmoComponent.h  AsteroidComponent.h  CollisionComponent.h  CombatComponent.h  Component.h  MinerComponent.h  MovementComponent.h  PositionComponent.h  SpriteComponent.h  TargetComponent.h
include/StarFighter/Events/: InputEvent.h
include/StarFighter/Systems/: CollisionSystem.h  CombatSystem.h  MiningSystem.h  MovementSystem.h  RenderSystem.h
src/: App.cpp  Camera.cpp  UIContext.cpp  World.cpp
src/Systems/: CollisionSystem.cpp  CombatSystem.cpp  MiningSystem.cpp  MovementSystem.cpp  RenderSystem.cpp
